[gd_scene load_steps=7 format=3 uid="uid://bhaabkethff4u"]

[ext_resource type="Texture2D" uid="uid://bxb1tvcsmvfnp" path="res://assets/sprites/MainPerso/Sword/22-Sword Spinning/Sword Spinning 01.png" id="1_ibe5x"]
[ext_resource type="Script" uid="uid://dps8ovvbsp27w" path="res://scripts/thrown_sword.gd" id="1_k306x"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_p0sg2"]
height = 20.0

[sub_resource type="Animation" id="Animation_fx7rq"]
resource_name = "spin"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.333333, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 3.14159, 4.71239, 6.28319]
}

[sub_resource type="Animation" id="Animation_gic6t"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xfyqf"]
_data = {
&"RESET": SubResource("Animation_gic6t"),
&"spin": SubResource("Animation_fx7rq")
}

[node name="ThrownSword" type="Area2D"]
script = ExtResource("1_k306x")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ibe5x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_p0sg2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xfyqf")
}

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
